@@ -382,8 +382,6 @@
 1018 2016- 2-27 BUG  it may happens a BAT file be displayed twice in the
                      BAT page (a restart fixes this)
 
-1049 2016- 3-23 FEAT make ofaRecurrentModel importable
-
 1053 2016- 3-26 CODE review the menu distribution
 
 1069
@@ -1031,6 +1029,9 @@
      2016- 3-22
 
 1048 2016- 3-23 FEAT make ofaRecurrentModel exportable
+     2016- 4- 8 done
+
+1049 2016- 3-23 FEAT make ofaRecurrentModel importable
      2016- 4- 8 done
 
 1050 2016- 3-25 CODE merge the importers
